--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: objective-c
 osx_image: xcode7
 xcode_project: PodDrop.xcodeproj
 xcode_scheme: PodDrop
+xcode_sdk: iphonesimulator8.3
 
 notifications:
   email: false
