--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: objective-c
 osx_image: xcode7
 xcode_project: PodDrop.xcodeproj
 xcode_scheme: PodDrop
-xcode_sdk: iphonesimulator8.3
+xcode_sdk: iphonesimulator
 
 notifications:
   email: false
