--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ xcode_project: PodDrop.xcodeproj
 xcode_scheme: PodDrop
 xcode_sdk: iphonesimulator
 
+script:
+- xcodebuild clean build test -project PodDrop.xcodeproj -scheme PodDrop
+
 notifications:
   email: false
   slack: iosdevcon1:xEnP1AqmiZ3L44wbPQaNd2St
