--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: objective-c
 osx_image: xcode7
-xcode_project: PodDrop.xcodeproj
+xcode_project: PodDrop.xcworkspace
 xcode_scheme: PodDrop
 xcode_sdk: iphonesimulator
 
 script:
-- xcodebuild clean build test -project PodDrop.xcodeproj -scheme PodDrop -sdk iphonesimulator CODE_SIGNING_REQUIRED=NO
+- pod install
+- xcodebuild clean build test -project PodDrop.xcworkspace -scheme PodDrop -sdk iphonesimulator CODE_SIGNING_REQUIRED=NO
 
 notifications:
   email: false
