--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ osx_image: xcode7
 xcode_workspace: PodDrop.xcworkspace
 xcode_scheme: PodDrop
 xcode_sdk: iphonesimulator
+cache: cocoapods
 
 
 notifications:
